--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,12 +44,12 @@ jobs:
       with:
         cmake-version: '3.20'
 
-    - name: Setup MSVC
-      uses: microsoft/setup-msbuild@v1.3
+    - name: Setup Visual Studio Environment
+      uses: microsoft/setup-msbuild@v2
 
     - name: Configure CMake
       run: |
-        cmake -B build -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 17 2022" -A x64
 
     - name: Build
       run: |
