--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Debug - List files
+      run: |
+        ls -la
+        pwd
+
     - name: Install dependencies
       run: |
         sudo apt-get update
@@ -39,17 +44,23 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Debug - List files
+      run: |
+        dir
+        echo "Current directory: %CD%"
+      shell: cmd
+
     - name: Setup CMake
       uses: jwlawson/actions-setup-cmake@v1.14
       with:
-        cmake-version: '3.20'
+        cmake-version: '3.25'
 
     - name: Setup Visual Studio Environment
       uses: microsoft/setup-msbuild@v2
 
     - name: Configure CMake
       run: |
-        cmake -B build -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 17 2022" -A x64
+        cmake -B build -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 16 2019" -A x64
 
     - name: Build
       run: |
