!!!CURRENTLY IN ACTIVE DEVELOPMENT!!!
Add semantic analysis components for type and variable handling

- Introduced `type.h` to define various data types and their properties.
- Implemented the `Type` class with methods for type validation, size calculation, and type promotion.
- Created `var.h` to define the `Variable` class, extending `Type` with additional attributes like accessor and modifier.
- Established a CMake configuration for the semantic analysis library.
- Developed `analysis.cpp` to implement the `Analyzer` class, handling expression inference, variable declarations, and function analysis.
- Added error handling for undeclared identifiers and type mismatches during semantic analysis.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,5 @@ add_subdirectory(basic)
 add_subdirectory(lexer)
 add_subdirectory(parser)
 add_subdirectory(ast)
+add_subdirectory(sema)
 add_subdirectory(compiler)
